--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
+    
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
+    "typeRoots" : ["node_modules/@types"],
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
